Use hierarchical file URIs in tests so getXjcArguments can convert them to Files